2007-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fns.c (map_char_table): Use an array of int for `indices' rather than
	an array of Lisp_Objects (which are only ever integers anyway).
	(Fmap_char_table): Update caller.
	* lisp.h: Update prototype.
	* keymap.c (Fset_keymap_parent, map_keymap, Fcopy_keymap):
	* fontset.c (Ffontset_info):
	* casetab.c (set_case_table): Update callers.

	* editfns.c (Ftranspose_regions): Use EMACS_INT for positions.

	* keymap.c (struct accessible_keymaps_data)
	(struct where_is_internal_data): New structures.
	(accessible_keymaps_1, where_is_internal_1): Use them to change
	interface to adhere to the one used by map_keymap.
	(Faccessible_keymaps, where_is_internal): Use map_keymap.
	(accessible_keymaps_char_table, where_is_internal_2): Remove.

	* keymap.h (map_keymap_function_t): More informative prototype.

2007-07-10  Guanpeng Xu  <herberteuler@hotmail.com>

	* search.c (Vinhibit_changing_match_data, search_regs_1): New vars.
	(looking_at_1): Don't change search_regs and last_thing_searched
	if `inhibit-changing-match-data' is non-nil.
	(string_match_1, search_buffer, set_search_regs): Likewise.
	(syms_of_search): Add Lisp level definition for
	`inhibit-changing-match-data' and set it to nil.
	(boyer_moore): If `inhibit-changing-match-data' is non-nil, compute
	start and end of the match, instead of using values in search_regs.

2007-07-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuf.c (Fcompleting_read): New value `confirm-only'
	for `require-match'.

2007-06-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fileio.c (Fdo_auto_save): Revert last patch installed unwillingly as
	part of the 2007-06-27 change to syms_of_fileio.

2007-06-28  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.c [USE_MAC_TSM] (mac_handle_text_input_event):
	Check WINDOWP before using XWINDOW.  Consolidate return statements.

2007-06-27  Richard Stallman  <rms@gnu.org>
